--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,13 @@
     "builds": [
       {
         "src": "app/main.py",
-        "use": "@vercel/python"
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb" }
       }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "app/main.py"
-      }
+      { "src": "/static/(.*)", "dest": "/app/static/$1" },
+      { "src": "/(.*)", "dest": "app/main.py" }
     ]
   }
   
